# Ex1week1

./: main.c  prod.c
tests/: CMakeLists.txt  test.c
